UserBambooBitbucketJiraIntegrationTest, UserJenkinsGitlabIntegrationTest, UserTestService: fix tests